# mujoco_contact_surfaces

./: .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  package.xml
assets/: ball_plate_world.xml  box_on_box_world.xml  box_on_plane_world.xml  cylinder_on_cylinder_world.xml  cylinder_on_plane_world.xml  mesh_on_box_world.xml  mesh_on_plane_world.xml  myrmex_20x20_world.xml  myrmex_5x5_world.xml  myrmex_surface_world.xml  rolling_sphere_world.xml  sphere_on_box_world.xml  sphere_on_plane_world.xml
config/: mujoco_contact_surfaces.yaml  mujoco_tactile.yaml
include/mujoco_contact_surfaces/: mujoco_contact_surfaces_plugin.h
launch/: ball_plate_example.launch  rolling_sphere_example.launch  test_contact_surfaces.launch  test_tactile.launch
mujoco_contact_surface_sensors/: CMakeLists.txt  LICENSE  mujoco_contact_surface_sensors_plugin.xml  package.xml  rosconsole.config
mujoco_contact_surface_sensors/assets/: fingertip_mocap.xml  myrmex_plate_world.xml  myrmex_spot_world.xml  myrmex_surface_world.xml
mujoco_contact_surface_sensors/assets/meshes/: plate_8in_col.stl
mujoco_contact_surface_sensors/cmake/: CheckSSE.cmake
mujoco_contact_surface_sensors/config/: DynamicFlatTactile.cfg  curved_fingertip.yaml  fingertip.yaml  flat_taxel_sensor.yaml  mujoco_tactile.yaml  myrmex_sensor.yaml
mujoco_contact_surface_sensors/include/mujoco_contact_surface_sensors/: bvh.h  curved_sensor.h  flat_tactile_sensor.h  float3.h  mujoco_contact_surface_sensors_plugin.h  tactile_sensor_base.h  taxel_sensor.h
mujoco_contact_surface_sensors/launch/: curved_fingertip_sensor.launch  fingertip_sensor.launch  flat_taxel_test.launch  myrmex_sensor.launch  test_tactile.launch
mujoco_contact_surface_sensors/src/: bvh.cpp  curved_sensor.cpp  flat_tactile_sensor.cpp  mujoco_contact_surface_sensors_plugin.cpp  tactile_sensor_base.cpp  taxel_sensor.cpp
mujoco_contact_surface_sensors/src/benchmark/: CMakeLists.txt  benchmark_flat.cpp
mujoco_contact_surface_sensors/srv/: GetTactileState.srv  TactileState.srv
mujoco_contact_surfaces/: CMakeLists.txt  mujoco_contact_surfaces_plugin.xml  package.xml
mujoco_contact_surfaces/assets/: box_on_plane_world.xml  box_tower_world.xml  contact_surface_demo_world.xml  cylinder_on_plane_world.xml  mesh_on_plane_world.xml  sphere_on_box_world.xml  spinning_ball_plate_world.xml
mujoco_contact_surfaces/config/: ball_plate_example_initial_joint_velocities.yaml  contact_surface_demo_config.yaml  rolling_sphere_example_initial_joint_velocities.yaml  spinning_ball_plate_example_initial_joint_velocities.yaml
mujoco_contact_surfaces/include/mujoco_contact_surfaces/: common_types.h  mujoco_contact_surfaces_plugin.h  plugin_utils.h
mujoco_contact_surfaces/launch/: ball_plate_example.launch  contact_surface_demo.launch  rolling_sphere_example.launch  spinning_ball_plate.launch  test_contact_surfaces.launch
mujoco_contact_surfaces/scripts/: contact_surface_demo.py
mujoco_contact_surfaces/src/: mujoco_contact_surfaces_plugin.cpp  plugin_utils.cpp
src/: mujoco_contact_surfaces_plugin.cpp
