<?xml version="1.0"?>
<package format="2">
  <name>mujoco_contact_surface_sensors</name>
  <version>1.0.0</version>
  <description>The mujoco_contact_surface_sensors package</description>


  <maintainer email="fpatzelt@techfak.uni-bielefeld.de">Florian Patzelt</maintainer>
  <author>Florian Patzelt</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>pluginlib</depend>
  <depend>mujoco_ros</depend>
  <depend>mujoco_contact_surfaces</depend>
  <depend>tactile_msgs</depend>

  <export>
    <mujoco_ros plugin="${prefix}/mujoco_contact_surface_sensors_plugin.xml" />
  </export>
</package>